Commiting refactoring of AddItemToInventoryController method

--- a/src/main/resources/Views/AddToInventory.fxml
+++ b/src/main/resources/Views/AddToInventory.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.metrostate.Controller.AddIngredientToInventoryController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="605.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.metrostate.Controller.AddItemToInventory.AddItemManager">
     <children>
         <Pane prefHeight="605.0" prefWidth="700.0" style="-fx-background-color: #fc9ea6;">
             <children>
